--- a/assets/dashboard.css
+++ b/assets/dashboard.css
@@ -1,4 +1,10 @@
-/* author: Jesse Kuhn */
+/* 
+author: Jesse Kuhn
+The css classes used for styling
+
+Returns:
+    _type_: _description_
+*/
 body {
     font-family: "Lato", sans-serif;
     margin: 0;
